@@ -1,4 +1,5 @@
 [mod-setting-name]
+statsgui-adjust-for-clock=Adjust for clock
 statsgui-adjust-for-fps-ups=Adjust for FPS/UPS indicator
 statsgui-show-sensor-daytime=Show daytime
 statsgui-show-sensor-evolution=Show evolution
