@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: ????
-  Changes:
+  Features:
+    - Added setting to adjust GUI position for the clock
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2021-08-15
